// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<DraftInfo /> > renders properly with description 1`] = `
<div>
  <div
    class="mx-16 mb-8 flex"
  >
    <div
      class="my-auto leading-none"
    >
      <div
        class="inline-flex rounded-full border-2 w-min h-min px-2 md:px-3 py-0.5 uppercase text-2xs md:text-xs border-orange-600 text-orange-600 bg-orange-100"
      >
        <div
          class="m-auto"
        >
          draft
        </div>
      </div>
    </div>
    <span
      class="text-orange-600 inline my-auto ml-4"
    >
      description
    </span>
  </div>
</div>
`;

exports[`<DraftInfo /> > renders properly without description 1`] = `
<div>
  <div
    class="mx-16 mb-8 flex"
  >
    <div
      class="my-auto leading-none"
    >
      <div
        class="inline-flex rounded-full border-2 w-min h-min px-2 md:px-3 py-0.5 uppercase text-2xs md:text-xs border-orange-600 text-orange-600 bg-orange-100"
      >
        <div
          class="m-auto"
        >
          draft
        </div>
      </div>
    </div>
    <span
      class="text-orange-600 inline my-auto ml-4"
    >
      This is a draft article. It may be incomplete.
    </span>
  </div>
</div>
`;
